--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,5 +20,10 @@
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0"
+    },
+    "dependencies": {
+        "axios": "^0.20.0",
+        "vue-router": "^3.4.3",
+        "vuex": "^3.5.1"
     }
 }
