--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,8 +11,13 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.11.5",
+        "@babel/polyfill": "^7.11.5",
+        "@babel/preset-env": "^7.11.5",
+        "babel-loader": "^8.0.0-beta.0",
         "css-loader": "^4.2.2",
         "html-webpack-plugin": "^4.3.0",
+        "postcss-loader": "^3.0.0",
         "style-loader": "^1.2.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.3",
