--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "axios": "^0.20.0",
+        "mockjs": "^1.1.0",
         "vue-router": "^3.4.3",
         "vuex": "^3.5.1"
     }
