--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,6 +15,7 @@
         "@babel/polyfill": "^7.11.5",
         "@babel/preset-env": "^7.11.5",
         "babel-loader": "^8.0.0-beta.0",
+        "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^4.2.2",
         "html-webpack-plugin": "^4.3.0",
         "postcss-loader": "^3.0.0",
