--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,6 +19,8 @@
         "css-loader": "^4.2.2",
         "html-webpack-plugin": "^4.3.0",
         "postcss-loader": "^3.0.0",
+        "sass": "^1.26.10",
+        "sass-loader": "^10.0.2",
         "style-loader": "^1.2.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.3",
@@ -29,6 +31,7 @@
     },
     "dependencies": {
         "axios": "^0.20.0",
+        "lodash": "^4.17.20",
         "mockjs": "^1.1.0",
         "vue-router": "^3.4.3",
         "vuex": "^3.5.1"
